<resources>
    <string name="app_name">Fake News Detection</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="login_button">Login</string>
    <string name="login_register">Or Sign up</string>
    <string name="register_button">Register</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="registeration_successfull">Successfully Registered</string>
    <string name="registeration_failed">Registeration Failed Retry Again!</string>
    <string name="error_username_exists">Email Already Existed</string>
    <string name="Logout">Logout</string>
    <string name="logout_confirmation">Confirm Logging out?</string>
    <string name="addevent_success">Your Story is online</string>
    <string name="error">Error Something went wrong</string>
    <string name="votingResult">You Voted!</string>
</resources>
